@startuml "uml_bdd_pg"
hide circle
hide empty methods
skinparam linetype ortho

entity "FA" as FA {
    * **identifiant_fa** : integer <<generated>>
    * identifiant_pot : integer
    * identifiant_lot : integer <<generated>>
    * {field} code_resultat : char(2)
    * date_importation : date
    * date_dernier_traitement : date
    {field} initial_numero : varchar(10)
    {field} initial_voie : varchar(100)
    {field} initial_code_postal : char(10)
    {field} initial_ville : varchar(100)
    {field} final_numero : varchar(10)
    {field} final_voie : varchar(100)
    {field} final_code_postal : char(10)
    {field} final_ville : varchar(100)
    coordonnees_WGS84 : float8[]
    champs_supplementaires : text[]
}

entity "Agents" as Agents {
    * **identifiant_agent** : integer <<generated>>
    * est_superviseur : boolean
    * quotite : float8
    identifiant_superviseur : integer
    identifiant_delegue : integer
    * {field} nom_utilisateur : varchar(64)
    * {field} mot_de_passe : char(128)
    * {field} prenom : varchar(50)
    * {field} nom : varchar(100)
}

entity "Modeles" as Modeles {
    * **identifiant_modele** : integer <<generated>>
    * {field} nom_modele : varchar(50)
    * {field} regex_nom_fichier : varchar(255)
    * position_champ_numero : smallint[]
    * position_champ_voie : smallint[]
    * position_champ_code_postal : smallint[]
    * position_champ_ville : smallint[]
    position_champs_supplementaires : text[][]
}

Agents "1..*" ||--|{ "1" FA : traite >
Agents "1..*" ||--|{ "1" Agents : supervise >
Agents "1" ||--|| "1" Agents : délègue >
@enduml